# orange-money-pipeline

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
blog/: architecture-medallion-orange-money-databricks.md
dbt/: dbt_project.yml  packages.yml
dbt/models/bronze/: schema.yml  stg_orange_money__transactions.sql
dbt/models/gold/: fct_orange_money__daily_summary.sql  fct_orange_money__merchant_activity.sql  schema.yml
dbt/models/silver/: int_orange_money__normalized_transactions.sql  schema.yml
notebooks/: 01_orange_money_api_exploration.py  02_bronze_ingestion.py  03_silver_transformation.py  04_gold_analytics.py
src/bronze/: __init__.py  raw_landing.py
src/gold/: __init__.py  daily_aggregates.py  fraud_patterns.py
src/ingestion/: __init__.py  config.py  orange_money_client.py
src/silver/: __init__.py  transaction_normalizer.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  test_bronze_landing.py  test_orange_money_client.py  test_silver_normalizer.py
