[project]
name = "orange-money-pipeline"
version = "1.0.0"
description = "Azure Databricks Medallion pipeline for Orange Money transaction data — Bronze → Silver → Gold with CDP-compliant PII masking"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Sen'Analytics", email = "engineering@senanalytics.sn" },
]
keywords = [
    "databricks",
    "medallion-architecture",
    "orange-money",
    "delta-lake",
    "cdp-compliance",
    "senegal",
    "mobile-money",
    "pyspark",
    "dbt",
    "unity-catalog",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]
dependencies = [
    "pyspark>=3.5.0",
    "delta-spark>=3.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
dbt = [
    "dbt-databricks>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# PySpark convention: import pyspark.sql.functions as F
"src/bronze/*.py" = ["N812"]
"src/silver/*.py" = ["N812"]
"src/gold/*.py" = ["N812"]
"tests/*.py" = ["F401"]  # pytest fixtures imported but detected as unused

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
